--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.12.0",
     "ejs": "*",
     "express": "*",
-    "extract-relationships": "0.0.6"
+    "extract-relationships": "0.0.6",
+    "request": "^2.53.0"
   }
 }
