--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "body-parser": "^1.12.0",
     "ejs": "*",
     "express": "*",
-    "extract-relationships": "0.0.6",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "watson-developer-cloud-alpha": "^0.10.0"
   }
 }
