--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "*",
     "express": "*",
     "request": "^2.53.0",
+    "unfluff": "^0.10.0",
     "watson-developer-cloud-alpha": "^0.10.0"
   }
 }
