--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "askwatson": "^1.0.11",
     "body-parser": "^1.12.0",
     "ejs": "*",
     "express": "*",
